--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,39 +17,48 @@ body{
 }
 
 h1 {
-  padding: 50px 0px 0px 550px;
+  padding: 50px 0px 0px 500px;
 }
 
 h3{
   text-align: center;
   font-size: 20px;
 }
+
 #title{
-    padding: 0px 0px 0px 650px;
+    padding: 0px 0px 0px 600px;
 }
 
 img{
-  width: 933px;
-  padding-top: 15px;
+  width: 10%;
 }
+#portadas{
+  width: 100%;
+}
+
 .contenido{
-  width: 913px;;
+  box-sizing: border-box;
+  width: 100%;
   height: 320px;
   background: #ABE188;
   margin-top: 15px;
-  padding: 10px;
+  padding: 5px;
 }
-.pictures{
-  width: 913px;;
+#pictures{
+  width: 100%;
   height: 320px;
   background: #ABE188;
   margin-top: 15px;
   padding: 10px;
+  box-sizing: border-box;
+  padding-top: 50px;
+  text-align: center;
+  
 }
 
 #caja1{
   box-sizing: border-box;
-  width: 460px;;
+  width: 460px;
   height: 270px;
   background: #F78E69;
   text-align: justify;
@@ -59,7 +68,7 @@ img{
 }
 #page{
   width:70%;
-  height: 2280px;
+  height: 2100px;
   background:#F78E69;
   margin: 0px auto;
 }
@@ -68,4 +77,14 @@ footer{
   text-align: right;
   padding: 5px;
   font-size: 14px;
+}
+
+#PicturesPanda {
+    margin-top: 0px;
+    text-align: center;
+}
+
+.bordes {
+    margin: 10px;
+    border: 10px solid white;
 }
